# stock_model_factory

./: .gitignore  README.md  build_dataset.py  evaluate.py  evaluate_strict.py  evalutate.py  induty_code.xlsx  main.py  pyproject.toml  train.py  train2.py
01_data_raw/: 000020_동화약품_kospi.csv  000040_KR모터스_kospi.csv  000050_경방_kospi.csv  000070_삼양홀딩스_kospi.csv  000080_하이트진로_kospi.csv  000087_하이트진로2우B_kospi.csv  000100_유한양행_kospi.csv  000105_유한양행우_kospi.csv  000120_CJ대한통운_kospi.csv  000140_하이트진로홀딩스_kospi.csv  000145_하이트진로홀딩스우_kospi.csv  000150_두산_kospi.csv  000155_두산우_kospi.csv  000157_두산2우B_kospi.csv  000180_성창기업지주_kospi.csv  000210_DL_kospi.csv  000215_DL우_kospi.csv  000220_유유제약_kospi.csv  000225_유유제약1우_kospi.csv  000227_유유제약2우B_kospi.csv  000230_일동홀딩스_kospi.csv  000240_한국앤컴퍼니_kospi.csv  000250_삼천당제약_kosdaq.csv  000270_기아_kospi.csv  000300_DH오토넥스_kospi.csv  000320_노루홀딩스_kospi.csv  000325_노루홀딩스우_kospi.csv  000370_한화손해보험_kospi.csv  000390_삼화페인트_kospi.csv  000400_롯데손해보험_kospi.csv  000430_대원강업_kospi.csv  000440_중앙에너비스_kosdaq.csv  000480_CR홀딩스_kospi.csv  000490_대동_kospi.csv  0004Y0_디비금융제14호스팩_kosdaq.csv  000500_가온전선_kospi.csv  000520_삼일제약_kospi.csv  000540_흥국화재_kospi.csv  000545_흥국화재우_kospi.csv  000590_CS홀딩스_kospi.csv  (+2732 more)
01_data_raw_2/: 000020_동화약품_KOSPI.csv  000040_KR모터스_KOSPI.csv  000050_경방_KOSPI.csv  000070_삼양홀딩스_KOSPI.csv  000080_하이트진로_KOSPI.csv  000100_유한양행_KOSPI.csv  000120_CJ대한통운_KOSPI.csv  000140_하이트진로홀딩스_KOSPI.csv  000150_두산_KOSPI.csv  000180_성창기업지주_KOSPI.csv  000210_DL_KOSPI.csv  000220_유유제약_KOSPI.csv  000230_일동홀딩스_KOSPI.csv  000240_한국앤컴퍼니_KOSPI.csv  (+2559 more)
src/: miner.py  (+2 more)
(+5 files in other folders)
