[project]
name = "stock-model-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opendartreader>=0.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pykrx>=1.0.51",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
